<resources>
    <string name="app_name">买卖通</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="editHint">请输入</string>
    <string name="spaceHint"></string>
    <string name="binding">已绑定</string>
    <string name="unbinding">未绑定</string>
    <string name="msn">123@4567890._abcdefghijklmnopqrstuvwxyz</string>
    <string name="log">操作日志</string>
    <string name="ok">确定</string>
    <string name="save">保存</string>
    <string name="sps"> - </string>
    <string name="imageTip">背景图</string>
    <string name="upLoad">加载更多</string>
    <string name="downRefresh">下拉刷新</string>
    <string name="lastUpdate">上次更新</string>
    <string name="contentDescription">描述</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="login_userName">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_findPassword">找回密码</string>
    <string name="login_remainName">记住账号和密码</string>
    <string name="login_tip">Welcome back</string>
    <string name="findpsw_tipPhone">请输入您的手机号：</string>
    <string name="findpsw_newPsw">请输入新密码：</string>
    <string name="findpsw_againNewPsw">再输入一次新密码：</string>
    <string name="validate_phone">手机号</string>
    <string name="validate_tipPhone">请输入手机号：</string>
    <string name="validate_tipCode">请输入验证码：</string>
    <string name="validate_code">验证码</string>
    <string name="validate_btn">获取验证码</string>
    <string name="validate_commit">提交</string>
    <string name="modifypsw_newpsw">新密码</string>
    <string name="modifypsw_confirmnewpsw">在输入一次新密码</string>
    <string name="mainmenu_homepage">首页</string>
    <string name="mainmenu_goods">商品</string>
    <string name="mainmenu_orders">订单</string>
    <string name="mainmenu_finance">财务</string>
    <string name="mainmenu_consultation">咨询</string>
    <string name="mainmenu_appUpdate">版本更新</string>
    <string name="mainmenu_logoff">退出登录</string>
    <string name="mainmenu_mine">我的</string>
    <string name="homepage_orders">待发货订单</string>
    <string name="homepage_message">待处理消息</string>
    <string name="homepage_ask">产品咨询</string>
    <string name="homepage_regist">缺货登记</string>
    <string name="homepage_doRecord">交易记录</string>
    <string name="homepage_account">对账单</string>
    <string name="homepage_aboutData">相关数据</string>
    <string name="homepage_level">商户等级</string>
    <string name="homepage_count">商品数量</string>
    <string name="homepage_service">服务分</string>
    <string name="homepage_other">相比其他</string>
    <string name="homepage_point">商城积分</string>
    <string name="homepage_experience">经验值</string>
    <string name="user_detail">个人资料</string>
    <string name="user_message">消息</string>
    <string name="userdetail_pic">我的头像</string>
    <string name="userdetail_username">用户名</string>
    <string name="userdetail_truename">真实姓名</string>
    <string name="userdetail_sex">性别</string>
    <string name="userdetail_sex_secret">保密</string>
    <string name="userdetail_sex_man">男</string>
    <string name="userdetail_sex_women">女</string>
    <string name="userdetail_birthday">我的生日</string>
    <string name="userdetail_QQ">我的QQ</string>
    <string name="userdetail_MSN">我的MSN</string>
    <string name="userdetail_mobile">我的手机</string>
    <string name="userdetail_changePsw">更改密码</string>
    <string name="userdetail_changePicture">更换头像</string>
    <string name="changePsw_currentAccount">当前帐号</string>
    <string name="changePsw_currentPsw">当前密码</string>
    <string name="changePsw_inputPhone">请输入您的手机号：</string>
    <string name="changePsw_inputNewPsw">设置新密码</string>
    <string name="changePsw_confirmNewPsw">确认新密码</string>
    <string name="changePsw_length">长度在6~20个字符之间</string>
    <string name="changePsw_commit">提交</string>
    <string name="orderquery_hint">订单号</string>
    <string name="orderquery_orderstate">订单状态</string>
    <string name="orderquery_evaluatestate">评价状态</string>
    <string name="orderquery_extension">所属营销平台</string>
    <string name="orderquery_time">下单时间</string>
    <string name="orderquery_query">查询</string>
    <string name="orderquery_state_none">不限</string>
    <string name="orderquery_state_needpay">待付款</string>
    <string name="orderquery_state_needsend">待发货</string>
    <string name="orderquery_state_sended">已发货</string>
    <string name="orderquery_state_complete">已完成</string>
    <string name="orderquery_state_cancel">已取消</string>
    <string name="orderquery_state_return">已退款</string>
    <string name="orderquery_state_evaluated">已评价</string>
    <string name="orderquery_state_needevaluate">未评价</string>
    <string name="orderquery_state_normal">商城</string>
    <string name="orderquery_state_tuan">团购</string>
    <string name="orderquery_time_starttime">起始时间</string>
    <string name="orderquery_time_endtime">结束时间</string>
    <string name="orderdetail_orderState">订单状态：</string>
    <string name="orderdetail_orderNo">订单编号：</string>
    <string name="orderdetail_orderTime">订单时间：</string>
    <string name="orderdetail_sendOrder">发货</string>
    <string name="orderdetail_queryTransInfo">查看物流</string>
    <string name="orderdetail_sendMoney">实际支付：</string>
    <string name="orderdetail_payType">支付方式：</string>
    <string name="orderdetail_changeMoney">调整费用</string>
    <string name="orderdetail_payDate">支付时间：</string>
    <string name="orderdetail_orderTitle">商品清单</string>
    <string name="orderdetail_change">更改</string>
    <string name="orderdetail_sumprice">总价：</string>
    <string name="orderdetail_receiveInfo">收货信息</string>
    <string name="orderdetail_receiver">收货人：</string>
    <string name="orderdetail_receiverPhone">联系电话：</string>
    <string name="orderdetail_city">市/县/区：</string>
    <string name="orderdetail_receiveradress">收货地址：</string>
    <string name="orderdetail_transInfo">物流信息</string>
    <string name="orderdetail_transCompany">物流公司：</string>
    <string name="orderdetail_transNo">快递单号：</string>
    <string name="orderdetail_transTime">发货时间：</string>
    <string name="orderdetail_transOtherInfo">备注信息：</string>
    <string name="orderdetail_otherInfo">备注信息</string>
    <string name="orderdetail_postscript">买家留言</string>
    <string name="orderdetail_cancelOther">取消订单</string>
    <string name="ordergoodsitem_goodName">商品名称：</string>
    <string name="ordergoodsitem_number">数量：</string>
    <string name="ordergoodsitem_belong">所属平台：</string>
    <string name="ordergoodsitem_colorstandard">颜色规格：</string>
    <string name="ordergoodsitem_price">单价：</string>
    <string name="ordergoodsitem_transprice">运费：</string>
    <string name="ordergoodsitem_transpriceinsurance">运费险：</string>
    <string name="cancelorder_reasonTip">订单取消原因</string>
    <string name="cancelorder_notEnough">无法备齐货物</string>
    <string name="cancelorder_notOrder">不是有效的订单</string>
    <string name="cancelorder_buyer">买家主动要求</string>
    <string name="cancelorder_otherReason">其他原因</string>
    <string name="billitem_price">结算金额：</string>
    <string name="billHeadItem_price">付款金额：</string>
    <string name="financial_bill">对账单</string>
    <string name="financial_billhead">付款通知单</string>
    <string name="consultation_manager">咨询管理</string>
    <string name="consultation_waitcallmanager">待回复咨询</string>
    <string name="consultation_record">缺货登记</string>
    <string name="consultation_recall">回复</string>
    <string name="goods_goodsManager">商品管理</string>
    <string name="goods_goodsManager_brand">品牌：</string>
    <string name="goods_goodsManager_type">分类：</string>
    <string name="goods_goodsManager_belong">平台：</string>
    <string name="goods_goodsManager_nosale">禁售：</string>
    <string name="goods_goodsManager_stock">库存：</string>
    <string name="goods_goodsTypeManager">分类排序</string>
    <string name="goods_goodsMarket">营销平台商品</string>
    <string name="goods_goodsMarket_price">供货价格：</string>
    <string name="goods_goodsMarket_stock">供货库存：</string>
    <string name="goods_goodsMarket_belong">营销平台：</string>
    <string name="goods_goodsMarket_date">申请时间：</string>
    <string name="goods_goodDetail_priceOrStock">会员价/库存</string>
    <string name="goods_goodDetail_newSequence">新品序</string>
    <string name="goods_goodDetail_pushSequence">推荐序</string>
    <string name="goods_goodDetail_push">推荐</string>
    <string name="goods_goodDetail_noSale">禁售</string>
    <string name="goods_priceOrStockItem_color">颜色：</string>
    <string name="goods_priceOrStockItem_size">尺码：</string>
    <string name="goods_priceOrStockItem_price">会员价：</string>
    <string name="goods_priceOrStockItem_stock">库存：</string>
    <string name="mySearchET_goodName">产品名称：</string>
    <string name="goodsQuery_shopType">本店分类：</string>
    <string name="goodsQuery_goodState">商品状态：</string>
    <string name="goodsQuery_no">不限</string>
    <string name="out_notice">有货通知</string>
    <string name="out_productName">产品名称：</string>
    <string name="out_productColor">颜色规格：</string>
    <string name="out_productUserName">姓名：</string>
    <string name="out_productPhone">电话：</string>
    <string name="out_productDate">时间：</string>
    <string name="out_productInfo">备注：</string>
    <string name="out_shopName">店铺名称：</string>
    <string name="out_receiveMessager">收信人：</string>
    <string name="out_good">登记商品：</string>
    <string name="out_messageContent">信件内容：</string>
    <string name="adress_tip">选择区域：</string>
    <string name="billHead_billheadNo">付款通知单号：</string>
    <string name="billHead_payDate">付款日期：</string>
    <string name="billHead_payer">付款方</string>
    <string name="billHead_bank">开户行：</string>
    <string name="billHead_user">开户名：</string>
    <string name="billHead_no">帐号：</string>
    <string name="billHead_receiver">收款方</string>
    <string name="billHead_money">金额</string>
    <string name="billHead_small">小写：</string>
    <string name="billHead_dealpay">手续费：</string>
    <string name="billHead_sum">合计：</string>
    <string name="billHead_sumbig">合计大写：</string>
    <string name="billHead_other">备注</string>
    <string name="bill_payDate">对账日期</string>
    <string name="bill_state">对账状态</string>
    <string name="bill_unconfirm">未确认</string>
    <string name="bill_confirmed">已确认</string>
    <string name="bill_payed">已结账</string>
    <string name="billQuery_belong">所属平台</string>
    <string name="messageDetail_messageName">消息名称：</string>
    <string name="messageDetail_messageDate">发送时间：</string>
    <string name="messageDetail_messageContent">消息内容：</string>
    <string name="messageDetail_deleteMessage">删除短消息</string>
    <string name="messageDetail_checkMessage">查看短消息</string>
    <string name="changeMoney_tip">只填写数字即可，保留到小数点后两位</string>
    <string name="changeMoney_buyer">买家：</string>
    <string name="changeMoney_orderNo">订单编号：</string>
    <string name="changeMoney_goodSum">商品总价：</string>
    <string name="changeMoney_ship">配送费用：</string>
    <string name="changeMoney_fee">运费险：</string>
    <string name="changeMoney_orderSum">订单总价：</string>
    <string name="changeMoney_modify">修改为：</string>
    <string name="set_myShop">我的店铺</string>
    <string name="set_changePsw">修改密码</string>
    <string name="set_checkUpd">检查更新</string>
    <string name="set_contactUs">联系我们</string>
    <string name="shop_shopName">店铺名称</string>
    <string name="shop_place">所在地区</string>
    <string name="shop_adress">详细地址</string>
    <string name="shop_phone">联系电话</string>
    <string name="shop_description">店铺简介</string>
    <string name="shopItem_gallery">从相册选择</string>
    <string name="shopItem_carama">拍摄照片</string>
    <string name="messageDelete_selectAll">全选</string>
    <string name="popItem_recalled">已回复</string>
    <string name="popItem_unrecall">未回复</string>
    <string name="popItem_all">全部</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>