<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sevenplustwo.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/et_modifypsw_Show"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:focusable="false"
        android:hint="@string/validate_phone" />

    <EditText
        android:id="@+id/et_modifypsw_newpsw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_modifypsw_Show"
        android:background="@drawable/shape"
        android:hint="@string/modifypsw_newpsw"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/et_modifypsw_confirmNewpsw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_modifypsw_newpsw"
        android:background="@drawable/shape"
        android:hint="@string/modifypsw_confirmnewpsw"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_modifypsw_commit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/shape"
        android:text="@string/validate_commit" />

</RelativeLayout>